#20 Fix bottom section dark mode color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -128,6 +128,10 @@
   padding-top: 5rem;
 }
 
+[data-theme="dark"] .bottom-section {
+  background: var(--bouvet-blue);
+}
+
 .bottom-section-left {
   margin-left: 5rem;
   justify-content: center;
